force-app/main/default/objects/IT_Alert_Email_Template__mdt/IT_Alert_Email_Template__mdt.object-meta.xml
<CustomObject>
    <label>IT Alert Email Template</label>
    <pluralLabel>IT Alert Email Templates</pluralLabel>
</CustomObject>