force-app/main/default/objects/IT_Alert_Email_Template__mdt/fields/EMAIL_CC__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_CC__c</fullName>
    <label>EMAIL CC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>