force-app/main/default/objects/IT_Alert_Email_Template__mdt/fields/EMAIL_CSS__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_CSS__c</fullName>
    <label>EMAIL CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>