force-app/main/default/objects/IT_Alert_Email_Template__mdt/fields/EMAIL_FOOTER__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_FOOTER__c</fullName>
    <label>EMAIL FOOTER</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>