force-app/main/default/objects/IT_Alert_Email_Template__mdt/fields/EMAIL_HEADER__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_HEADER__c</fullName>
    <label>EMAIL HEADER</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>