force-app/main/default/objects/IT_Alert_Email_Template__mdt/fields/EMAIL_TEMPLATE__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_TEMPLATE__c</fullName>
    <label>EMAIL TEMPLATE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>