force-app/main/default/objects/IT_Alert_Email_Template__mdt/validationRules/To_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>To_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( EMAIL_TO__c ) = 0</errorConditionFormula>
    <errorDisplayField>EMAIL_TO__c</errorDisplayField>
    <errorMessage>To is required</errorMessage>
</ValidationRule>